# LakeCurrent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: config.py  main.py  router.py
backend/app/clients/: base.py  lakefilter.py  lakeglimpse.py
backend/app/parsing/: lakefilter_parser.py  lakeglimpse_parser.py
backend/tests/: conftest.py  test_lakefilter_client.py  test_lakefilter_parser.py  test_lakeglimpse_client.py  test_lakeglimpse_parser.py  test_router.py
backend/tests/fixtures/: lakefilter_response.json  lakeglimpse_response.html
docs/: PRD-Scraper-Integration.md
lakefilter/: settings.yml
