[project]
name = "lakecurrent"
version = "0.1.0"
description = "LakeCurrent - The Data Reservoir Series Search Platform"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Champ-Deep"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
]

[project.urls]
Repository = "https://github.com/Champ-Deep/LakeCurrent"
Issues = "https://github.com/Champ-Deep/LakeCurrent/issues"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
